# FlaskFactor2

./: .gitignore  Dockerfile  LICENCE.md  README.md  __main__.py  app.py  compose.yaml  database.db  flask_factor.db  generate_test_coverage.ps1  models.py  pyproject.toml  requirements.txt
docs/: journal.md  todo.md
routes/: admin.py  admin_route.py  characters.py  home.py  home_route.py  players.py  players_route.py  transactions_route.py
services/: players_service.py
templates/: admin.html  base.html  characters.html  error.html  footer.html  navbar.html  players.html  transactions.html
templates/home/: home.html  login.html
templates/players/: add_player.html  fetch_player.html  player_add.html  player_edit.html  player_list.html  player_login.html  players_list.html  remove_player.html
templates/static/: styles.css
tests/: test_models.py  test_players_service.py
web/: web_main.py
web/routes/: home.py
web/templates/: home.html
