[tool.poetry]
name = "flask_factor_2"
version = "0.1.0"
description = ""
authors = ["Evan Young <cantis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^22.0.0"
sqlmodel = "^0.0.21"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
adopts = "-ra -q"
pythonpath = [".", "src", "web"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN001", "ANN101"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101"]
